--- a/src/components/quizComponents/createQuizComponent/createQuizInfo.module.css
+++ b/src/components/quizComponents/createQuizComponent/createQuizInfo.module.css
@@ -1,97 +1,99 @@
-.quiz_name{
+.quiz_name {
+  width: 100%;
+  height: 3.5rem;
+  padding: 1.5%;
+  border: none;
+  border-radius: 0.5rem;
+  background: #fff;
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
+  outline: none;
+  color: #9f9f9f;
+  text-align: left;
+  font-family: Poppins;
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+
+.quiz_type {
     width: 100%;
-    height: 2rem;
-    padding: 1.5%;
-    border: none;
-    border-radius: 0.5rem;
-    background: #FFF;
-    box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
-    outline: none;
-color: #9F9F9F;
-text-align: left;
-font-family: Poppins;
-font-size: 1rem;
-font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #9f9f9f;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 1rem;
 }
 
-.quiz_type{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #9F9F9F;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin: 1rem;
+.quiz_type input {
+  height: 3rem;
+  width: 11rem;
+  border: none;
+  outline: none;
+  border-radius: 0.5rem;
+  color: #9f9f9f;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  background: #fff;
+  cursor: pointer;
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
 }
 
-.quiz_type input{
-    height: 3rem;
-    width: 11rem;
-    border: none;
-    outline: none;
-    border-radius: 0.5rem;
-    color: #9F9F9F;
-text-align: center;
-font-family: Poppins;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-background: #FFF;
-cursor: pointer;
-box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
+.quiz_type input:hover {
+  color: #fff;
+  background: #60b84b;
 }
 
-.quiz_type input:hover{
-    color: #FFF;
-background: #60B84B;
+.quiz_type input:active,
+.quiz_type input:focus,
+.quiz_type input:visited {
+  color: #fff;
+  background: #60b84b;
 }
 
-.quiz_type input:active, .quiz_type input:focus, .quiz_type input:visited{
-    color: #FFF;    
-background: #60B84B;
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem;
 }
 
-.buttons{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 1rem;
+.buttons button {
+  border-radius: 10px;
+  background: #fff;
+  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
+  width: 12rem;
+  height: 3rem;
+  border: none;
+  outline: none;
+  color: #474444;
+  font-family: Poppins;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  cursor: pointer;
 }
 
-.buttons button{
-    border-radius: 10px;
-    background: #FFF;
-    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
-    width: 15rem;
-    height: 3rem;
-    border: none;
-    outline: none;
-    color: #474444;
-font-family: Poppins;
-font-size: 1rem;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-    cursor: pointer;
+.buttons button:hover {
+  background: #60b84b;
+  color: #fff;
 }
 
-.buttons button:hover{
-    background: #60B84B;
-    color: #FFF;
+.buttons .continueBtn {
+  background-color: #60b84b;
+  color: #fff;
 }
 
-.buttons .continueBtn{
-    background-color: #60B84B;
-    color: #FFF;
-}
-
-.buttons .continueBtn:hover{
-    background: #FFF;
-    color: #474444;
-
+.buttons .continueBtn:hover {
+  background: #fff;
+  color: #474444;
 }
