--- a/src/components/quizComponents/options/options.module.css
+++ b/src/components/quizComponents/options/options.module.css
@@ -1,8 +1,10 @@
+
 .option{
     display: flex;
     align-items: center;
     width: 20rem;
 }
+
 
 .add_opt{
     display: flex;
@@ -31,4 +33,25 @@ line-height: normal;
 .buttons button:hover{
     background: #60B84B;
     color: #FFF;
+}
+
+
+.option_input{
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
+    padding: 3%;
+    margin: 1% 2%;
+    border: none;
+    width: 12rem;
+    height: 2rem;
+    outline: none;
+}
+
+
+
+.trash_btn{
+    background: none;
+    border: none;
+    outline: none;
 }
