--- a/src/pages/quizs/quizInterface/quizInterface.module.css
+++ b/src/pages/quizs/quizInterface/quizInterface.module.css
@@ -148,4 +148,42 @@ line-height: normal;
 }
 
 
+@media screen and (max-width: 600px) {
 
+    .parent{
+        height: auto;
+        display: block;
+        background-color: #fff;
+        padding: 2rem;
+    }
+
+    .parent .quizInterface {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* width: 100vw; */
+        /* height: 100vh; */
+        width: auto;
+        height: 100%;
+        border-radius: 15px;
+        /* margin: 0 auto; */
+        margin: 0;
+        padding: 0;
+        /* padding: 25px; */
+        background: #FFF;
+        box-shadow: none;
+    }
+    .questionName h1{
+        font-size: 1.5rem;
+    }
+    .quizInterface .options {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        grid-gap: 20px;
+        justify-items: center;
+        margin: 2%;
+    }
+
+}
