--- a/src/pages/quizs/score/congoInterface.module.css
+++ b/src/pages/quizs/score/congoInterface.module.css
@@ -72,3 +72,47 @@
   font-weight: 700;
   line-height: normal;
 }
+
+
+
+@media screen and (max-width: 600px) {
+
+  .parent{
+      height: auto;
+      display: block;
+      background-color: #fff;
+      padding: 2rem;
+  }
+
+  .parent .thnakyouMsg {
+    border-radius: 15px;
+    background: #fff;
+    /* box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15); */
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* padding: 33rem; */
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 0px 53px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .questionName h1{
+      font-size: 1.5rem;
+  }
+  .quizInterface .options {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      width: 100%;
+      grid-gap: 20px;
+      justify-items: center;
+      margin: 2%;
+  }
+
+}
